--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <p style="font-family: Georgia, 'Times New Roman', Times, serif; color: lightslategray; text-align: center;"> On this page, you can find a list of websites I have made this year in ART 2602C - Intro to Digital Media. Thank you for stopping by!
 <br><br>
 <h4 style="color: ;lightslategray; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;""> <a href="HowardR_ART2602C_3Pages_1.html"> Three Pages Assignment</a> </h4>
+<h4 style="color: ;lightslategray; font-family: Georgia, 'Times New Roman', Times, serif; text-align: center;""> <a href="mbs.html"> Mind, Body, Spiti Collage</a> </h4>
 
 </body>
 </html>
