--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Home Page
+<title> Index Page
 </title>
 <body style="background-color: beige;">
 <h1 style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: center; color: darkred;"> Home Page</h1>
